--- a/config/locales/client.he.yml
+++ b/config/locales/client.he.yml
@@ -1957,9 +1957,6 @@ he:
       suggested_topics:
         title: "אפשר להמשיך לקרוא!"
         content: "הינה כמה נושאים שלדעתנו יעניין אותך לקרוא בהמשך."
-      welcome_topic:
-        title: "עריכת נושא קבלת הפנים"
-        content: "סיוע לחברים חדשים להרגיש בבית על ידי התאמת הנושא כך שיתאים לצורכי הקהילה שלך."
     loading: "טוען..."
     errors:
       prev_page: "בזמן הניסיון לטעון"
@@ -6052,6 +6049,11 @@ he:
             label: "הוספת אמוג׳י"
         title: "הגדרות"
         no_results: "לא נמצאו תוצאות."
+        more_site_setting_results:
+          one: "יש למעלה מתוצאה אחת. נא למקד את החיפוש שלך."
+          two: "יש למעלה משתי תוצאות. נא למקד את החיפוש שלך."
+          many: "יש למעלה מ־%{count} תוצאות. נא למקד את החיפוש שלך."
+          other: "יש למעלה מ־%{count} תוצאות. נא למקד את החיפוש שלך."
         clear_filter: "ניקוי"
         add_url: "הוספת כתובת URL"
         add_host: "הוספת שרת"
