--- a/plugins/chat/config/locales/client.ar.yml
+++ b/plugins/chat/config/locales/client.ar.yml
@@ -469,3 +469,7 @@ ar:
           few: "إشعارات الدردشة - %{count} إشعارات غير مقروءة"
           many: "إشعارات الدردشة - %{count} إشعارًا غير مقروء"
           other: "إشعارات الدردشة - %{count} إشعارًا غير مقروء"
+    styleguide:
+      sections:
+        chat:
+          title: الدردشة
