--- a/plugins/chat/config/locales/client.bg.yml
+++ b/plugins/chat/config/locales/client.bg.yml
@@ -48,19 +48,32 @@ bg:
         add: "Добави "
         join: "Влизане"
         leave: "Напусни"
+      channel_delete:
+        instructions: "<p>Изтрива канала <strong>%{name}</strong> и историята на чата. Всички съобщения и свързани с тях данни, като реакции и качвания, ще бъдат изтрити за постоянно. Ако искате да запазите историята на канала и да го деактивирате, може вместо това да архивирате канала.</p> <p>Сигурни ли сте, че искате да <strong>изтриете окончателно</strong> канала? За да потвърдите, въведете името на канала в полето по-долу.</p>"
       close: "Затвори"
+      expand: "Разгънете чекмеджето за чат"
+      deleted:
+        one: "Едно съобщение беше изтрито. [view]"
+        other: "%{count} съобщения бяха изтрити. [виж всички]"
       delete: "Изтрий"
       muted: "заглуши"
       joined: "присъединен"
       email_frequency:
         never: "Никога"
       header_indicator_preference:
+        title: "Показване на индикатора за активност в хедъра"
+        all_new: "Всички нови съобщения"
+        dm_and_mentions: "Директни съобщения и споменавания"
         never: "Никога"
       flag: "Сигнализиране"
       join: "Влизане"
       last_visit: "последно посещение"
       mention_warning:
         dismiss: "отмени"
+        cannot_see: "%{username} няма достъп до този канал и не е уведомен."
+        cannot_see_multiple:
+          one: "%{username} и %{count} друг потребител нямат достъп до този канал и не са били уведомени."
+          other: "%{username} и %{count} други потребители нямат достъп до този канал и не са били уведомени."
       reply: "Отговорете"
       edit: "Редактирай"
       rebake_message: "Прегенерирай HTML "
@@ -149,3 +162,7 @@ bg:
           fields:
             message:
               label: Съобщение
+    styleguide:
+      sections:
+        chat:
+          title: Чат
