--- a/plugins/chat/config/locales/client.id.yml
+++ b/plugins/chat/config/locales/client.id.yml
@@ -133,3 +133,7 @@ id:
           fields:
             message:
               label: pesan
+    styleguide:
+      sections:
+        chat:
+          title: Obrolan
