--- a/plugins/chat/config/locales/client.nl.yml
+++ b/plugins/chat/config/locales/client.nl.yml
@@ -443,3 +443,7 @@ nl:
         chat_notifications_with_unread:
           one: "Chatmeldingen - %{count} ongelezen melding"
           other: "Chatmeldingen - %{count} ongelezen meldingen"
+    styleguide:
+      sections:
+        chat:
+          title: Chat
