--- a/plugins/chat/config/locales/client.ru.yml
+++ b/plugins/chat/config/locales/client.ru.yml
@@ -457,3 +457,7 @@ ru:
           few: "Уведомления чата —%{count} непрочитанных уведомления"
           many: "Уведомления чата —%{count} непрочитанных уведомлений"
           other: "Уведомления чата —%{count} непрочитанных уведомлений"
+    styleguide:
+      sections:
+        chat:
+          title: Чат
