--- a/plugins/chat/config/locales/client.uk.yml
+++ b/plugins/chat/config/locales/client.uk.yml
@@ -516,3 +516,7 @@ uk:
           few: "Повідомлення чату – %{count} непрочитані повідомлення"
           many: "Повідомлення чату – %{count} непрочитаних повідомлень"
           other: "Повідомлення чату – %{count} непрочитаних повідомлень"
+    styleguide:
+      sections:
+        chat:
+          title: Чат
