--- a/config/locales/client.tr_TR.yml
+++ b/config/locales/client.tr_TR.yml
@@ -1033,6 +1033,7 @@ tr_TR:
           warning: "Öne çıkarılan konunuzu silmek istediğinizden emin misiniz?"
       use_current_timezone: "Mevcut Saat Dilimini Kullan"
       profile_hidden: "Bu kullanıcının genel profili gizli."
+      inactive_user: "Bu kullanıcı artık aktif değil."
       expand_profile: "Genişlet"
       sr_expand_profile: "Profil detaylarını genişlet"
       collapse_profile: "Daralt"
@@ -1747,9 +1748,6 @@ tr_TR:
       suggested_topics:
         title: "Okumaya devam edin!"
         content: "İşte daha sonra okumak isteyebileceğinizi düşündüğümüz bazı konular."
-      welcome_topic:
-        title: "Hoş geldin konusunu düzenleyin"
-        content: "Bu konuyu topluluğunuzun ihtiyaçlarına göre özelleştirerek yeni üyelerin kendilerini evlerinde hissetmelerine yardımcı olun."
     loading: "Yükleniyor..."
     errors:
       prev_page: "şunu yüklemeye çalışırken:"
@@ -5499,6 +5497,9 @@ tr_TR:
             label: "Emoji ekle"
         title: "Ayarlar"
         no_results: "Sonuç bulunamadı."
+        more_site_setting_results:
+          one: "Birden çok sonuç var. Lütfen aramanızı daraltın veya bir kategori seçin."
+          other: "%{count} adetten çok sonuç var. Lütfen aramanızı daraltın veya bir kategori seçin."
         clear_filter: "Temizle"
         add_url: "URL ekle"
         add_host: "sunucu ekle"
